<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".AddTaskActivity" >

     <TextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_tasks_title" />
     
	<EditText
	    android:id="@+id/edit_task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
	<TextView 
	    android:id="@+id/address_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"/>
	<Button
	    android:id="@+id/add_new_task_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_label"/>
	
	<Button
	    android:id="@+id/add_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addLocationButtonClicked"
        android:text="@string/add_location_to_task_button_title"/>

	<Button
	    android:id="@+id/cancel_add_task_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel_button_label" />
	
</LinearLayout>