<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/location_title"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_location_to_task_title" />
    
    <EditText 
        android:id="@+id/task_address"
	    android:layout_below="@id/location_title"
        android:lines="3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
	<Button
	    android:id="@+id/map_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@id/task_address"
        android:text="@string/map_this_address_button_title"/>
        
	<com.google.android.maps.MapView
	    android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:clickable="true"
	    android:layout_below="@id/map_location_button"
	    android:layout_above="@+id/use_this_location_button"
	    android:apiKey="0etkcagxcihYbDsfAeo03ivi8pX8qnO6lg98B6g"/>
	
	<!-- key for home mashine: '0etkcagxcihZfqcaZ0F6hgPDmWkP7VOsmNdFpIA'  -->
	<!-- fingerprint on working mashin: 71:F6:78:AD:9C:2C:CE:1F:B1:09:18:8C:86:31:A5:DF -->
	<!-- key for working mashine: '0etkcagxcihYbDsfAeo03ivi8pX8qnO6lg98B6g'  -->
	<!-- details here http://www.youtube.com/watch?v=dSqLKIow7sY -->

    <Button 
        android:id="@id/use_this_location_button"
        android:text="@string/use_this_location_title"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

</RelativeLayout>